--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="main.js" defer></script>
 </head>
 <body>
+    <button id = "new-grid-button">New Grid</button>
  <div id="container"></div>
 </body>
 </html>
